// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TimeScale golden output (one fixture per interval) > boundary: leap-year Feb 28→Mar 1 2024 (hour scale) 1`] = `
{
  "tickCount": 49,
  "tickInterval": "hours",
  "ticks": [
    {
      "dateString": "2024-02-28T00:00:00.000Z",
      "month": 2,
      "unit": "hour",
      "value": "00:00",
      "year": 2024,
    },
    {
      "dateString": "2024-02-28T01:00:00.000Z",
      "month": 2,
      "unit": "hour",
      "value": "01:00",
      "year": 2024,
    },
    {
      "dateString": "2024-02-28T02:00:00.000Z",
      "month": 2,
      "unit": "hour",
      "value": "02:00",
      "year": 2024,
    },
    {
      "dateString": "2024-02-28T03:00:00.000Z",
      "month": 2,
      "unit": "hour",
      "value": "03:00",
      "year": 2024,
    },
    {
      "dateString": "2024-02-28T04:00:00.000Z",
      "month": 2,
      "unit": "hour",
      "value": "04:00",
      "year": 2024,
    },
    {
      "dateString": "2024-02-28T05:00:00.000Z",
      "month": 2,
      "unit": "hour",
      "value": "05:00",
      "year": 2024,
    },
    {
      "dateString": "2024-02-28T06:00:00.000Z",
      "month": 2,
      "unit": "hour",
      "value": "06:00",
      "year": 2024,
    },
    {
      "dateString": "2024-02-28T07:00:00.000Z",
      "month": 2,
      "unit": "hour",
      "value": "07:00",
      "year": 2024,
    },
    {
      "dateString": "2024-02-28T08:00:00.000Z",
      "month": 2,
      "unit": "hour",
      "value": "08:00",
      "year": 2024,
    },
    {
      "dateString": "2024-02-28T09:00:00.000Z",
      "month": 2,
      "unit": "hour",
      "value": "09:00",
      "year": 2024,
    },
    {
      "dateString": "2024-02-28T10:00:00.000Z",
      "month": 2,
      "unit": "hour",
      "value": "10:00",
      "year": 2024,
    },
    {
      "dateString": "2024-02-28T11:00:00.000Z",
      "month": 2,
      "unit": "hour",
      "value": "11:00",
      "year": 2024,
    },
    {
      "dateString": "2024-02-28T12:00:00.000Z",
      "month": 2,
      "unit": "hour",
      "value": "12:00",
      "year": 2024,
    },
    {
      "dateString": "2024-02-28T13:00:00.000Z",
      "month": 2,
      "unit": "hour",
      "value": "13:00",
      "year": 2024,
    },
    {
      "dateString": "2024-02-28T14:00:00.000Z",
      "month": 2,
      "unit": "hour",
      "value": "14:00",
      "year": 2024,
    },
    {
      "dateString": "2024-02-28T15:00:00.000Z",
      "month": 2,
      "unit": "hour",
      "value": "15:00",
      "year": 2024,
    },
    {
      "dateString": "2024-02-28T16:00:00.000Z",
      "month": 2,
      "unit": "hour",
      "value": "16:00",
      "year": 2024,
    },
    {
      "dateString": "2024-02-28T17:00:00.000Z",
      "month": 2,
      "unit": "hour",
      "value": "17:00",
      "year": 2024,
    },
    {
      "dateString": "2024-02-28T18:00:00.000Z",
      "month": 2,
      "unit": "hour",
      "value": "18:00",
      "year": 2024,
    },
    {
      "dateString": "2024-02-28T19:00:00.000Z",
      "month": 2,
      "unit": "hour",
      "value": "19:00",
      "year": 2024,
    },
    {
      "dateString": "2024-02-28T20:00:00.000Z",
      "month": 2,
      "unit": "hour",
      "value": "20:00",
      "year": 2024,
    },
    {
      "dateString": "2024-02-28T21:00:00.000Z",
      "month": 2,
      "unit": "hour",
      "value": "21:00",
      "year": 2024,
    },
    {
      "dateString": "2024-02-28T22:00:00.000Z",
      "month": 2,
      "unit": "hour",
      "value": "22:00",
      "year": 2024,
    },
    {
      "dateString": "2024-02-28T23:00:00.000Z",
      "month": 2,
      "unit": "hour",
      "value": "23:00",
      "year": 2024,
    },
    {
      "dateString": "2024-02-29T00:00:00.000Z",
      "month": 2,
      "unit": "day",
      "value": "29 Feb",
      "year": 2024,
    },
    {
      "dateString": "2024-02-29T01:00:00.000Z",
      "month": 2,
      "unit": "hour",
      "value": "01:00",
      "year": 2024,
    },
    {
      "dateString": "2024-02-29T02:00:00.000Z",
      "month": 2,
      "unit": "hour",
      "value": "02:00",
      "year": 2024,
    },
    {
      "dateString": "2024-02-29T03:00:00.000Z",
      "month": 2,
      "unit": "hour",
      "value": "03:00",
      "year": 2024,
    },
    {
      "dateString": "2024-02-29T04:00:00.000Z",
      "month": 2,
      "unit": "hour",
      "value": "04:00",
      "year": 2024,
    },
    {
      "dateString": "2024-02-29T05:00:00.000Z",
      "month": 2,
      "unit": "hour",
      "value": "05:00",
      "year": 2024,
    },
    {
      "dateString": "2024-02-29T06:00:00.000Z",
      "month": 2,
      "unit": "hour",
      "value": "06:00",
      "year": 2024,
    },
    {
      "dateString": "2024-02-29T07:00:00.000Z",
      "month": 2,
      "unit": "hour",
      "value": "07:00",
      "year": 2024,
    },
    {
      "dateString": "2024-02-29T08:00:00.000Z",
      "month": 2,
      "unit": "hour",
      "value": "08:00",
      "year": 2024,
    },
    {
      "dateString": "2024-02-29T09:00:00.000Z",
      "month": 2,
      "unit": "hour",
      "value": "09:00",
      "year": 2024,
    },
    {
      "dateString": "2024-02-29T10:00:00.000Z",
      "month": 2,
      "unit": "hour",
      "value": "10:00",
      "year": 2024,
    },
    {
      "dateString": "2024-02-29T11:00:00.000Z",
      "month": 2,
      "unit": "hour",
      "value": "11:00",
      "year": 2024,
    },
    {
      "dateString": "2024-02-29T12:00:00.000Z",
      "month": 2,
      "unit": "hour",
      "value": "12:00",
      "year": 2024,
    },
    {
      "dateString": "2024-02-29T13:00:00.000Z",
      "month": 2,
      "unit": "hour",
      "value": "13:00",
      "year": 2024,
    },
    {
      "dateString": "2024-02-29T14:00:00.000Z",
      "month": 2,
      "unit": "hour",
      "value": "14:00",
      "year": 2024,
    },
    {
      "dateString": "2024-02-29T15:00:00.000Z",
      "month": 2,
      "unit": "hour",
      "value": "15:00",
      "year": 2024,
    },
    {
      "dateString": "2024-02-29T16:00:00.000Z",
      "month": 2,
      "unit": "hour",
      "value": "16:00",
      "year": 2024,
    },
    {
      "dateString": "2024-02-29T17:00:00.000Z",
      "month": 2,
      "unit": "hour",
      "value": "17:00",
      "year": 2024,
    },
    {
      "dateString": "2024-02-29T18:00:00.000Z",
      "month": 2,
      "unit": "hour",
      "value": "18:00",
      "year": 2024,
    },
    {
      "dateString": "2024-02-29T19:00:00.000Z",
      "month": 2,
      "unit": "hour",
      "value": "19:00",
      "year": 2024,
    },
    {
      "dateString": "2024-02-29T20:00:00.000Z",
      "month": 2,
      "unit": "hour",
      "value": "20:00",
      "year": 2024,
    },
    {
      "dateString": "2024-02-29T21:00:00.000Z",
      "month": 2,
      "unit": "hour",
      "value": "21:00",
      "year": 2024,
    },
    {
      "dateString": "2024-02-29T22:00:00.000Z",
      "month": 2,
      "unit": "hour",
      "value": "22:00",
      "year": 2024,
    },
    {
      "dateString": "2024-02-29T23:00:00.000Z",
      "month": 2,
      "unit": "hour",
      "value": "23:00",
      "year": 2024,
    },
    {
      "dateString": "2024-03-01T00:00:00.000Z",
      "month": 3,
      "unit": "day",
      "value": "01 Mar",
      "year": 2024,
    },
  ],
}
`;

exports[`TimeScale golden output (one fixture per interval) > boundary: year crossing Dec 28 2023 → Jan 5 2024 (day scale) 1`] = `
{
  "tickCount": 9,
  "tickInterval": "days",
  "ticks": [
    {
      "dateString": "2023-12-28T00:00:00.000Z",
      "month": 12,
      "unit": "day",
      "value": "28 Dec",
      "year": 2023,
    },
    {
      "dateString": "2023-12-29T00:00:00.000Z",
      "month": 12,
      "unit": "day",
      "value": "29 Dec",
      "year": 2023,
    },
    {
      "dateString": "2023-12-30T00:00:00.000Z",
      "month": 12,
      "unit": "day",
      "value": "30 Dec",
      "year": 2023,
    },
    {
      "dateString": "2023-12-31T00:00:00.000Z",
      "month": 12,
      "unit": "day",
      "value": "31 Dec",
      "year": 2023,
    },
    {
      "dateString": "2024-01-01T00:00:00.000Z",
      "month": 1,
      "unit": "month",
      "value": "Jan '24",
      "year": 2024,
    },
    {
      "dateString": "2024-01-02T00:00:00.000Z",
      "month": 1,
      "unit": "day",
      "value": "02 Jan",
      "year": 2024,
    },
    {
      "dateString": "2024-01-03T00:00:00.000Z",
      "month": 1,
      "unit": "day",
      "value": "03 Jan",
      "year": 2024,
    },
    {
      "dateString": "2024-01-04T00:00:00.000Z",
      "month": 1,
      "unit": "day",
      "value": "04 Jan",
      "year": 2024,
    },
    {
      "dateString": "2024-01-05T00:00:00.000Z",
      "month": 1,
      "unit": "day",
      "value": "05 Jan",
      "year": 2024,
    },
  ],
}
`;

exports[`TimeScale golden output (one fixture per interval) > days: 10-day range 1`] = `
{
  "tickCount": 11,
  "tickInterval": "days",
  "ticks": [
    {
      "dateString": "2024-01-01T00:00:00.000Z",
      "month": 1,
      "unit": "month",
      "value": "Jan '24",
      "year": 2024,
    },
    {
      "dateString": "2024-01-02T00:00:00.000Z",
      "month": 1,
      "unit": "day",
      "value": "02 Jan",
      "year": 2024,
    },
    {
      "dateString": "2024-01-03T00:00:00.000Z",
      "month": 1,
      "unit": "day",
      "value": "03 Jan",
      "year": 2024,
    },
    {
      "dateString": "2024-01-04T00:00:00.000Z",
      "month": 1,
      "unit": "day",
      "value": "04 Jan",
      "year": 2024,
    },
    {
      "dateString": "2024-01-05T00:00:00.000Z",
      "month": 1,
      "unit": "day",
      "value": "05 Jan",
      "year": 2024,
    },
    {
      "dateString": "2024-01-06T00:00:00.000Z",
      "month": 1,
      "unit": "day",
      "value": "06 Jan",
      "year": 2024,
    },
    {
      "dateString": "2024-01-07T00:00:00.000Z",
      "month": 1,
      "unit": "day",
      "value": "07 Jan",
      "year": 2024,
    },
    {
      "dateString": "2024-01-08T00:00:00.000Z",
      "month": 1,
      "unit": "day",
      "value": "08 Jan",
      "year": 2024,
    },
    {
      "dateString": "2024-01-09T00:00:00.000Z",
      "month": 1,
      "unit": "day",
      "value": "09 Jan",
      "year": 2024,
    },
    {
      "dateString": "2024-01-10T00:00:00.000Z",
      "month": 1,
      "unit": "day",
      "value": "10 Jan",
      "year": 2024,
    },
    {
      "dateString": "2024-01-11T00:00:00.000Z",
      "month": 1,
      "unit": "day",
      "value": "11 Jan",
      "year": 2024,
    },
  ],
}
`;

exports[`TimeScale golden output (one fixture per interval) > half_year: 900-day range 1`] = `
{
  "tickCount": 5,
  "tickInterval": "half_year",
  "ticks": [
    {
      "dateString": "2022-07-01T00:00:00.000Z",
      "month": 7,
      "unit": "month",
      "value": "Jul '22",
      "year": 2022,
    },
    {
      "dateString": "2023-01-01T00:00:00.000Z",
      "month": 1,
      "unit": "year",
      "value": "2023",
      "year": 2023,
    },
    {
      "dateString": "2023-07-01T00:00:00.000Z",
      "month": 7,
      "unit": "month",
      "value": "Jul '23",
      "year": 2023,
    },
    {
      "dateString": "2024-01-01T00:00:00.000Z",
      "month": 1,
      "unit": "year",
      "value": "2024",
      "year": 2024,
    },
    {
      "dateString": "2024-07-01T00:00:00.000Z",
      "month": 7,
      "unit": "month",
      "value": "Jul '24",
      "year": 2024,
    },
  ],
}
`;

exports[`TimeScale golden output (one fixture per interval) > hours: 5-hour range 1`] = `
{
  "tickCount": 6,
  "tickInterval": "hours",
  "ticks": [
    {
      "dateString": "2024-01-01T12:00:00.000Z",
      "month": 1,
      "unit": "hour",
      "value": "12:00",
      "year": 2024,
    },
    {
      "dateString": "2024-01-01T13:00:00.000Z",
      "month": 1,
      "unit": "hour",
      "value": "13:00",
      "year": 2024,
    },
    {
      "dateString": "2024-01-01T14:00:00.000Z",
      "month": 1,
      "unit": "hour",
      "value": "14:00",
      "year": 2024,
    },
    {
      "dateString": "2024-01-01T15:00:00.000Z",
      "month": 1,
      "unit": "hour",
      "value": "15:00",
      "year": 2024,
    },
    {
      "dateString": "2024-01-01T16:00:00.000Z",
      "month": 1,
      "unit": "hour",
      "value": "16:00",
      "year": 2024,
    },
    {
      "dateString": "2024-01-01T17:00:00.000Z",
      "month": 1,
      "unit": "hour",
      "value": "17:00",
      "year": 2024,
    },
  ],
}
`;

exports[`TimeScale golden output (one fixture per interval) > minutes: 8-minute range 1`] = `
{
  "tickCount": 8,
  "tickInterval": "minutes",
  "ticks": [
    {
      "dateString": "2024-01-01T12:00:00.000Z",
      "month": 1,
      "unit": "minute",
      "value": "12:00:00",
      "year": 2024,
    },
    {
      "dateString": "2024-01-01T12:01:00.000Z",
      "month": 1,
      "unit": "minute",
      "value": "12:01:00",
      "year": 2024,
    },
    {
      "dateString": "2024-01-01T12:02:00.000Z",
      "month": 1,
      "unit": "minute",
      "value": "12:02:00",
      "year": 2024,
    },
    {
      "dateString": "2024-01-01T12:03:00.000Z",
      "month": 1,
      "unit": "minute",
      "value": "12:03:00",
      "year": 2024,
    },
    {
      "dateString": "2024-01-01T12:04:00.000Z",
      "month": 1,
      "unit": "minute",
      "value": "12:04:00",
      "year": 2024,
    },
    {
      "dateString": "2024-01-01T12:05:00.000Z",
      "month": 1,
      "unit": "minute",
      "value": "12:05:00",
      "year": 2024,
    },
    {
      "dateString": "2024-01-01T12:06:00.000Z",
      "month": 1,
      "unit": "minute",
      "value": "12:06:00",
      "year": 2024,
    },
    {
      "dateString": "2024-01-01T12:07:00.000Z",
      "month": 1,
      "unit": "minute",
      "value": "12:07:00",
      "year": 2024,
    },
  ],
}
`;

exports[`TimeScale golden output (one fixture per interval) > minutes_fives: 30-minute range 1`] = `
{
  "tickCount": 6,
  "tickInterval": "minutes_fives",
  "ticks": [
    {
      "dateString": "2024-01-01T12:00:00.000Z",
      "month": 1,
      "unit": "minute",
      "value": "12:00:00",
      "year": 2024,
    },
    {
      "dateString": "2024-01-01T12:05:00.000Z",
      "month": 1,
      "unit": "minute",
      "value": "12:05:00",
      "year": 2024,
    },
    {
      "dateString": "2024-01-01T12:10:00.000Z",
      "month": 1,
      "unit": "minute",
      "value": "12:10:00",
      "year": 2024,
    },
    {
      "dateString": "2024-01-01T12:15:00.000Z",
      "month": 1,
      "unit": "minute",
      "value": "12:15:00",
      "year": 2024,
    },
    {
      "dateString": "2024-01-01T12:20:00.000Z",
      "month": 1,
      "unit": "minute",
      "value": "12:20:00",
      "year": 2024,
    },
    {
      "dateString": "2024-01-01T12:25:00.000Z",
      "month": 1,
      "unit": "minute",
      "value": "12:25:00",
      "year": 2024,
    },
  ],
}
`;

exports[`TimeScale golden output (one fixture per interval) > months: 200-day range 1`] = `
{
  "tickCount": 7,
  "tickInterval": "months",
  "ticks": [
    {
      "dateString": "2024-01-01T00:00:00.000Z",
      "month": 1,
      "unit": "month",
      "value": "Jan '24",
      "year": 2024,
    },
    {
      "dateString": "2024-02-01T00:00:00.000Z",
      "month": 2,
      "unit": "month",
      "value": "Feb '24",
      "year": 2024,
    },
    {
      "dateString": "2024-03-01T00:00:00.000Z",
      "month": 3,
      "unit": "month",
      "value": "Mar '24",
      "year": 2024,
    },
    {
      "dateString": "2024-04-01T00:00:00.000Z",
      "month": 4,
      "unit": "month",
      "value": "Apr '24",
      "year": 2024,
    },
    {
      "dateString": "2024-05-01T00:00:00.000Z",
      "month": 5,
      "unit": "month",
      "value": "May '24",
      "year": 2024,
    },
    {
      "dateString": "2024-06-01T00:00:00.000Z",
      "month": 6,
      "unit": "month",
      "value": "Jun '24",
      "year": 2024,
    },
    {
      "dateString": "2024-07-01T00:00:00.000Z",
      "month": 7,
      "unit": "month",
      "value": "Jul '24",
      "year": 2024,
    },
  ],
}
`;

exports[`TimeScale golden output (one fixture per interval) > months_days: 70-day range 1`] = `
{
  "tickCount": 8,
  "tickInterval": "months_days",
  "ticks": [
    {
      "dateString": "2024-01-01T00:00:00.000Z",
      "month": 1,
      "unit": "month",
      "value": "Jan '24",
      "year": 2024,
    },
    {
      "dateString": "2024-01-10T00:00:00.000Z",
      "month": 1,
      "unit": "day",
      "value": "10 Jan",
      "year": 2024,
    },
    {
      "dateString": "2024-01-20T00:00:00.000Z",
      "month": 1,
      "unit": "day",
      "value": "20 Jan",
      "year": 2024,
    },
    {
      "dateString": "2024-02-01T00:00:00.000Z",
      "month": 2,
      "unit": "month",
      "value": "Feb '24",
      "year": 2024,
    },
    {
      "dateString": "2024-02-10T00:00:00.000Z",
      "month": 2,
      "unit": "day",
      "value": "10 Feb",
      "year": 2024,
    },
    {
      "dateString": "2024-02-20T00:00:00.000Z",
      "month": 2,
      "unit": "day",
      "value": "20 Feb",
      "year": 2024,
    },
    {
      "dateString": "2024-03-01T00:00:00.000Z",
      "month": 3,
      "unit": "month",
      "value": "Mar '24",
      "year": 2024,
    },
    {
      "dateString": "2024-03-10T00:00:00.000Z",
      "month": 3,
      "unit": "day",
      "value": "10 Mar",
      "year": 2024,
    },
  ],
}
`;

exports[`TimeScale golden output (one fixture per interval) > months_fortnight: 100-day range 1`] = `
{
  "tickCount": 7,
  "tickInterval": "months_fortnight",
  "ticks": [
    {
      "dateString": "2024-01-01T00:00:00.000Z",
      "month": 1,
      "unit": "month",
      "value": "Jan '24",
      "year": 2024,
    },
    {
      "dateString": "2024-01-15T00:00:00.000Z",
      "month": 1,
      "unit": "day",
      "value": "15 Jan",
      "year": 2024,
    },
    {
      "dateString": "2024-02-01T00:00:00.000Z",
      "month": 2,
      "unit": "month",
      "value": "Feb '24",
      "year": 2024,
    },
    {
      "dateString": "2024-02-15T00:00:00.000Z",
      "month": 2,
      "unit": "day",
      "value": "15 Feb",
      "year": 2024,
    },
    {
      "dateString": "2024-03-01T00:00:00.000Z",
      "month": 3,
      "unit": "month",
      "value": "Mar '24",
      "year": 2024,
    },
    {
      "dateString": "2024-03-15T00:00:00.000Z",
      "month": 3,
      "unit": "day",
      "value": "15 Mar",
      "year": 2024,
    },
    {
      "dateString": "2024-04-01T00:00:00.000Z",
      "month": 4,
      "unit": "month",
      "value": "Apr '24",
      "year": 2024,
    },
  ],
}
`;

exports[`TimeScale golden output (one fixture per interval) > seconds: 5-second range 1`] = `
{
  "tickCount": 5,
  "tickInterval": "seconds",
  "ticks": [
    {
      "dateString": "2024-01-01T12:00:00.000Z",
      "month": 1,
      "unit": "second",
      "value": "12:00:00",
      "year": 2024,
    },
    {
      "dateString": "2024-01-01T12:00:01.000Z",
      "month": 1,
      "unit": "second",
      "value": "12:00:01",
      "year": 2024,
    },
    {
      "dateString": "2024-01-01T12:00:02.000Z",
      "month": 1,
      "unit": "second",
      "value": "12:00:02",
      "year": 2024,
    },
    {
      "dateString": "2024-01-01T12:00:03.000Z",
      "month": 1,
      "unit": "second",
      "value": "12:00:03",
      "year": 2024,
    },
    {
      "dateString": "2024-01-01T12:00:04.000Z",
      "month": 1,
      "unit": "second",
      "value": "12:00:04",
      "year": 2024,
    },
  ],
}
`;

exports[`TimeScale golden output (one fixture per interval) > seconds_fives: 30-second range 1`] = `
{
  "tickCount": 6,
  "tickInterval": "seconds_fives",
  "ticks": [
    {
      "dateString": "2024-01-01T12:00:00.000Z",
      "month": 1,
      "unit": "second",
      "value": "12:00:00",
      "year": 2024,
    },
    {
      "dateString": "2024-01-01T12:00:05.000Z",
      "month": 1,
      "unit": "second",
      "value": "12:00:05",
      "year": 2024,
    },
    {
      "dateString": "2024-01-01T12:00:10.000Z",
      "month": 1,
      "unit": "second",
      "value": "12:00:10",
      "year": 2024,
    },
    {
      "dateString": "2024-01-01T12:00:15.000Z",
      "month": 1,
      "unit": "second",
      "value": "12:00:15",
      "year": 2024,
    },
    {
      "dateString": "2024-01-01T12:00:20.000Z",
      "month": 1,
      "unit": "second",
      "value": "12:00:20",
      "year": 2024,
    },
    {
      "dateString": "2024-01-01T12:00:25.000Z",
      "month": 1,
      "unit": "second",
      "value": "12:00:25",
      "year": 2024,
    },
  ],
}
`;

exports[`TimeScale golden output (one fixture per interval) > seconds_tens: 2-minute range 1`] = `
{
  "tickCount": 12,
  "tickInterval": "seconds_tens",
  "ticks": [
    {
      "dateString": "2024-01-01T12:00:00.000Z",
      "month": 1,
      "unit": "second",
      "value": "12:00:00",
      "year": 2024,
    },
    {
      "dateString": "2024-01-01T12:00:10.000Z",
      "month": 1,
      "unit": "second",
      "value": "12:00:10",
      "year": 2024,
    },
    {
      "dateString": "2024-01-01T12:00:20.000Z",
      "month": 1,
      "unit": "second",
      "value": "12:00:20",
      "year": 2024,
    },
    {
      "dateString": "2024-01-01T12:00:30.000Z",
      "month": 1,
      "unit": "second",
      "value": "12:00:30",
      "year": 2024,
    },
    {
      "dateString": "2024-01-01T12:00:40.000Z",
      "month": 1,
      "unit": "second",
      "value": "12:00:40",
      "year": 2024,
    },
    {
      "dateString": "2024-01-01T12:00:50.000Z",
      "month": 1,
      "unit": "second",
      "value": "12:00:50",
      "year": 2024,
    },
    {
      "dateString": "2024-01-01T12:01:00.000Z",
      "month": 1,
      "unit": "second",
      "value": "12:01:00",
      "year": 2024,
    },
    {
      "dateString": "2024-01-01T12:01:10.000Z",
      "month": 1,
      "unit": "second",
      "value": "12:01:10",
      "year": 2024,
    },
    {
      "dateString": "2024-01-01T12:01:20.000Z",
      "month": 1,
      "unit": "second",
      "value": "12:01:20",
      "year": 2024,
    },
    {
      "dateString": "2024-01-01T12:01:30.000Z",
      "month": 1,
      "unit": "second",
      "value": "12:01:30",
      "year": 2024,
    },
    {
      "dateString": "2024-01-01T12:01:40.000Z",
      "month": 1,
      "unit": "second",
      "value": "12:01:40",
      "year": 2024,
    },
    {
      "dateString": "2024-01-01T12:01:50.000Z",
      "month": 1,
      "unit": "second",
      "value": "12:01:50",
      "year": 2024,
    },
  ],
}
`;

exports[`TimeScale golden output (one fixture per interval) > week_days: 40-day range 1`] = `
{
  "tickCount": 6,
  "tickInterval": "week_days",
  "ticks": [
    {
      "dateString": "2024-01-01T00:00:00.000Z",
      "month": 1,
      "unit": "month",
      "value": "Jan '24",
      "year": 2024,
    },
    {
      "dateString": "2024-01-08T00:00:00.000Z",
      "month": 1,
      "unit": "day",
      "value": "08 Jan",
      "year": 2024,
    },
    {
      "dateString": "2024-01-16T00:00:00.000Z",
      "month": 1,
      "unit": "day",
      "value": "16 Jan",
      "year": 2024,
    },
    {
      "dateString": "2024-01-24T00:00:00.000Z",
      "month": 1,
      "unit": "day",
      "value": "24 Jan",
      "year": 2024,
    },
    {
      "dateString": "2024-02-01T00:00:00.000Z",
      "month": 2,
      "unit": "month",
      "value": "Feb '24",
      "year": 2024,
    },
    {
      "dateString": "2024-02-08T00:00:00.000Z",
      "month": 2,
      "unit": "day",
      "value": "08 Feb",
      "year": 2024,
    },
  ],
}
`;

exports[`TimeScale golden output (one fixture per interval) > years: 6-year range 1`] = `
{
  "tickCount": 7,
  "tickInterval": "years",
  "ticks": [
    {
      "dateString": "2018-01-01T00:00:00.000Z",
      "month": 1,
      "unit": "year",
      "value": "2018",
      "year": 2018,
    },
    {
      "dateString": "2019-01-01T00:00:00.000Z",
      "month": 1,
      "unit": "year",
      "value": "2019",
      "year": 2019,
    },
    {
      "dateString": "2020-01-01T00:00:00.000Z",
      "month": 1,
      "unit": "year",
      "value": "2020",
      "year": 2020,
    },
    {
      "dateString": "2021-01-01T00:00:00.000Z",
      "month": 1,
      "unit": "year",
      "value": "2021",
      "year": 2021,
    },
    {
      "dateString": "2022-01-01T00:00:00.000Z",
      "month": 1,
      "unit": "year",
      "value": "2022",
      "year": 2022,
    },
    {
      "dateString": "2023-01-01T00:00:00.000Z",
      "month": 1,
      "unit": "year",
      "value": "2023",
      "year": 2023,
    },
    {
      "dateString": "2024-01-01T00:00:00.000Z",
      "month": 1,
      "unit": "year",
      "value": "2024",
      "year": 2024,
    },
  ],
}
`;
